# hasht-server

./: .gitignore  CMakeLists.txt  Makefile  README.md  hasht-client
include/: hashtable.h  server.h  shared_mem.h
src/: main.cpp
